<resources>
    <string name="app_name">Assignment2</string>
    <string name="email_address">Email Address <font color='red'>*</font></string>
    <string name="password">Password<font color='red'>*</font></string>
    <string name="username">Username<font color='red'>*</font></string>
    <string name="dateofbirth">Date of Birth<font color='red'>*</font></string>
    <string name="gender">Gender<font color='red'>*</font></string>
    <string name="newpassword">New Password<font color='red'>*</font></string>
    <string name="confirmpassword">Confirm Password<font color='red'>*</font></string>
</resources>
