<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvcreateaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an Account"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="10sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvcreateaccount" />

    <TextView
        android:id="@+id/tvpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"

        android:textColor="@color/colorPrimaryDark"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evemail" />

    <EditText
        android:id="@+id/evemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="10sp"

        android:background="@drawable/shape"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Enter Email Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvemail" />

    <EditText
        android:id="@+id/evpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Enter password"
        android:textSize="10sp"
        android:background="@drawable/shape"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpassword" />

    <TextView
        android:id="@+id/tvdateofbirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateofbirth"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evpassword" />

    <EditText
        android:id="@+id/evdateofbirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Birthdate"
        android:background="@drawable/shape"
        android:textColor="@android:color/white"
        android:inputType="date"
        android:clickable="true"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdateofbirth" />

    <Button
        android:id="@+id/datepicker"
        android:layout_width="38dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/datepicker"
        app:layout_constraintBottom_toBottomOf="@+id/evdateofbirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvdateofbirth"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvselectgender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="10sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evdateofbirth" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvselectgender"
        />

    <Button
        android:id="@+id/btnsignup"
        android:text="Sign Up"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:background="@drawable/shape"

        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvlogin" />

    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already Register?Login"
        android:textSize="10sp"
        android:clickable="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>