<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/tvforgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="10sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvforgotpassword" />

    <EditText
        android:id="@+id/evusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter username"
        android:padding="10dp"
        android:textSize="10sp"

        android:background="@drawable/shape"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvusername" />

    <TextView
        android:id="@+id/tvnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newpassword"
        android:textSize="10sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evusername" />

    <EditText
        android:id="@+id/evnewpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:padding="10dp"
        android:textSize="10sp"

        android:background="@drawable/shape"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Enter new Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvnewpassword" />

    <TextView
        android:id="@+id/tvconfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmpassword"
        android:textSize="10sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evnewpassword" />

    <EditText
        android:id="@+id/evconfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="Confirm password"
        android:padding="10dp"
        android:textSize="10sp"

        android:background="@drawable/shape"
        android:textColor="@android:color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvconfirmpassword" />

    <Button
        android:id="@+id/bvresetpassword"
        android:layout_width="162dp"
        android:layout_height="35dp"
        android:text="Reset Password"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evconfirmpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>